# hexlet_django_blog

./: .gitignore  Makefile  pyproject.toml
hexlet_django_blog/: settings.py  urls.py  views.py
hexlet_django_blog/article/: admin.py  forms.py  models.py  urls.py  views.py
hexlet_django_blog/article/migrations/: 0001_initial.py  0002_rename_timesstamp_article_timestamp.py  0003_articlecomment.py
hexlet_django_blog/templates/: about.html  base.html  index.html
hexlet_django_blog/templates/articles/: comment.html  create.html  index.html  show.html  update.html
