[tool.poetry]
name = "hexlet-django-blog"
version = "0.1.0"
description = ""
authors = ["sergey-emelyanov <emelia35@yandex.ru>"]
readme = "README.md"
packages = [{include = "hexlet_django_blog"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.3"
tree = "^0.2.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
